# odsc2025

./: .gitignore  LICENSE  MANIFEST.in  README.md  prerequisites.txt  pyproject.toml  setup.py
ergodic_cd/: __init__.py
ergodic_cd/oracles/: __init__.py  base.py
ergodic_cd/search/: __init__.py  astar.py  orientation.py
notebooks/: 1_conditional_independence.ipynb  2_deadly_sins.ipynb  3_causal_discovery.ipynb
