[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ergodic_cd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.4.2",
    "numpy>=1.22",
    "pandas>=2.2.2",
    "pydantic>=2.11.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ergodic_cd", "ergodic_cd.*", "ergodic_cd.oracles", "ergodic_cd.search"]
namespaces = false
